--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,9 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
+				<version>3.7.0</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<release>10</release>
 				</configuration>
 			</plugin>
 			<plugin>
